21.07.2001	libvbi <mschimek@users.sf.net>

	* Added aspect ratio event.

17.07.2001	libvbi/wss <mschimek@users.sf.net>

	* Added vbi_push_video function, works ok. Some more
	  details to be finished.

16.07.2001	<mschimek@users.sf.net>

	* capture.c: ported capture_fifo to fifo2
	* v4lx.c: ported vbi fifo to fifo2
	* Removed unneeded functions from acc colour
	  conv: uyvy, *v*u*; enabled SSE, 3DNow, Athlon.
	* Replaced CPU detection code. Hope this works for
	  everyone.

15.07.2001	mpeg plugin <mschimek@users.sf.net>

	* tveng.c: tveng_get_timestamp(), RETURN_UNTVLOCK()
	  int cast of double time; symptom MPEG plugin a+v heisenbug
	  in mp1e sync routines, delayed or inhibited recording. Added
	  timestamp validation in mp1e.

06.07.2001	mpeg plugin <mschimek@users.sf.net>

	* made tveng2 EINTR aware (debugging)
	* added motion option to mpeg plugin 

05.07.2001	libvbi <mschimek@users.sf.net>

	* rewrote common/list.h
	* replaced libvbi/dllist.h
	* fixed http link name bug

02.07.2001	assorted fixes <garetxe@users.sf.net>

	* channel_editor: Pops up a dialog box asking for the new channel
	name if none was given when hitting Add.
	* everything: Portability to Solaris, adapted from a patch by
	Roger Fujii.
	* configure.in: Removed broken "-multrasparc -mvis" in
	configure.in.
	* error_console.c: "console_errors" clo.
	* fr.po: Updated (Christian Marillat).
	* help/man/: Man pages (Christian Marillat).

30.06.2001	yuv filters <garetxe@users.sf.net>

	* yuv2rgb_mmx.c: Uses Michael's autogenerated filters now.
	* gen_conv.[sh]: added.
	* x11stuff.c, zapping_setup_fb: improve screen depth detection.

28.06.2001	--disable-v4l <garetxe@users.sf.net>

	* configure.in, v4lx.c, tveng1.c, tveng2.c: Added --disable-v4l
	option, lets all the V4L specific stuff out of the compilation,
	for Solaris.

23.06.2001	<mschimek@users.sf.net>

	* gcc 3.0 fixes (nothing serious)

22.06.2001	bug fixes <garetxe@users.sf.net>
