@@ -2192,7 +2192,7 @@ default_colour_map[40] = {
 
 	/* Private colours */
 
-	0xFF111111, 0xFF99AAFF, 0xFF44EE00, 0xFF00DDFF, 0xFFFFAA99, 0xFFFF00FF, 0xFFFFFF00, 0xFFEEEEEE,
+	0xFF000000, 0xFF99AAFF, 0xFF44EE00, 0xFF00DDFF, 0xFFFFAA99, 0xFFFF00FF, 0xFFFFFF00, 0xFFEEEEEE,
 };
 
 /*
